# labaratory-site

./: .gitignore  README.md  package.json  package.json.backup  svg - Shortcut.lnk
.cursor/commands/: laba-new-project.md  project-page.md
backend/: .example.env  .gitignore  docker-compose.yaml  logging.yaml  pyproject.toml
backend/migrations/models/: 1_20250504183809_Created leads table.py
backend/src/: dev.db  main.py
backend/src/contact/: api.py
backend/src/core/: logging.py  routers.py  settings.py
backend/src/db/: config.py  mixins.py  register.py
backend/src/leads/: api.py  dependencies.py  exceptions.py  models.py  schemas.py  usecases.py
backend/src/notifications/: dto.py  email.py  notifier.py  template_loader.py
backend/src/notifications/abc/: notification.py  notifier_builder.py  recipient.py  transport_client.py  types.py
backend/src/photos/: api.py  models.py  schemas.py
backend/templates/emails/: contact.html
backend/tools/: import_public_media.py
frontend/: .gitignore  next.config.mjs  package.json  package.json.backup  tsconfig.json  video.d.ts
frontend/public/images/team/: convert-folder-to-webp.bat
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: About.tsx
frontend/src/app/contact/: Contact.tsx
frontend/src/hooks/: useBodyScrollLock.ts  useChunkSmart.ts  useHoverTyping.ts  useMediaQuery.ts  useMuteVideo.ts  useRotateTyping.ts  useScrolled.ts
frontend/src/lib/: api.ts  projects.ts
frontend/types/: next-legacy-image.d.ts  react-liquid-glass.d.ts
(+32 files in other folders)
